alignment correction

--- a/assets/css/theme-desktop-app.css
+++ b/assets/css/theme-desktop-app.css
@@ -349,7 +349,7 @@ h6, .h6 {
   font-weight: 600;
   line-height: 1.2; }
 
-.display-4-gr {
+.display-4-gr-0 {
   font-size: 3.5rem;
   font-weight: 600;
   line-height: 1.2;
@@ -361,6 +361,58 @@ h6, .h6 {
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;
   }
+
+  .display-4-gr-1 {
+    font-size: 3.5rem;
+    font-weight: 600;
+    line-height: 1.2;
+    background: linear-gradient(to right, #4285F4, #0097A7);
+    background-size: 100%;
+    background-repeat: repeat;
+  	-webkit-background-clip: text;
+  	-webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+    }
+
+    .display-4-gr-2 {
+      font-size: 3.5rem;
+      font-weight: 600;
+      line-height: 1.2;
+      background: linear-gradient(to right, #0097A7, #F1C232);
+      background-size: 100%;
+      background-repeat: repeat;
+    	-webkit-background-clip: text;
+    	-webkit-text-fill-color: transparent;
+      -moz-background-clip: text;
+      -moz-text-fill-color: transparent;
+      }
+
+      .display-4-gr-3 {
+        font-size: 3.5rem;
+        font-weight: 600;
+        line-height: 1.2;
+        background: linear-gradient(to right, #E41A86, #0097A7);
+        background-size: 100%;
+        background-repeat: repeat;
+      	-webkit-background-clip: text;
+      	-webkit-text-fill-color: transparent;
+        -moz-background-clip: text;
+        -moz-text-fill-color: transparent;
+        }
+
+        .display-4-gr-4 {
+          font-size: 3.5rem;
+          font-weight: 600;
+          line-height: 1.2;
+          background: linear-gradient(to right, #0097A7, #4285F4);
+          background-size: 100%;
+          background-repeat: repeat;
+        	-webkit-background-clip: text;
+        	-webkit-text-fill-color: transparent;
+          -moz-background-clip: text;
+          -moz-text-fill-color: transparent;
+          }
 
 hr {
   margin-top: 1.5rem;
